Fixing 'v' sign css on mobile

--- a/web/app/themes/Foody/resources/sass/pages/recipe/_recipe-new.scss
+++ b/web/app/themes/Foody/resources/sass/pages/recipe/_recipe-new.scss
@@ -2965,15 +2965,15 @@ $content-width: 95%;
           .check-icon {
             position: absolute;
             font-size: 26px;
-            font-weight: bold;
+            font-weight: 700;
             width: 44px;
             height: 44px;
-            color: white;
+            color: #fff;
             border-radius: 60%;
             border: 1px solid;
             text-align: center;
-            left: 9%;
-            top: unset;
+            left: 25px;
+            top: 11px;
             right: unset;
           }
 
@@ -2983,32 +2983,32 @@ $content-width: 95%;
             }
 
             position: absolute;
-            background: white;
+            background: #fff;
             font-size: 23px;
-            font-weight: bold;
+            font-weight: 700;
             border-radius: 60%;
             padding: 1%;
             left: 8%;
-            margin-left: 12px;
-            top: unset;
+            margin-left: 3px;
+            top: 12px;
             right: unset;
-            width: 36px;
-            height: 36px;
+            width: 42px;
+            height: 42px;
 
             .btn-text {
               text-align: center;
               border-radius: 60%;
-              border: #e6392b 1px solid;
+              border: 1px solid #e6392b;
               color: #e6392b;
               margin: auto;
-              width: 30px;
-              height: 30px;
-              font-family: 'AfekBold';
+              width: 34px;
+              height: 34px;
+              font-family: AfekBold;
               font-size: 19px;
               position: absolute;
-              top: 9%;
-              left: 10%;
-              margin-top: 0px;
+              top: 4px;
+              left: 4px;
+              margin-top: 0;
             }
           }
 
